--- a/TextileResearchDevelopment/Views/Fabric/Index.cshtml
+++ b/TextileResearchDevelopment/Views/Fabric/Index.cshtml
@@ -129,6 +129,7 @@
                     <th>FabricTypeID</th>
                     <th>CompositionTypeID</th>
                     <th>FP</th>
+                    <th>BarCode</th>
                     <th>BuyerName</th>
                     <th>FabricType</th>
                     <th>Composition</th>
@@ -152,6 +153,7 @@
                     <th></th>
                     <th></th>
                     <th>FP</th>
+                    <th>BarCode</th>
                     <th>BuyerName</th>
                     <th>FabricType</th>
                     <th>Composition</th>
