--- a/TextileResearchDevelopment/Views/Shared/_Layout.cshtml
+++ b/TextileResearchDevelopment/Views/Shared/_Layout.cshtml
@@ -30,7 +30,40 @@
                     <li>@Ajax.ActionLink("Fabric", "Index", "Fabric", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>
                 </ul>
                 <ul class="nav navbar-nav">
-                    <li>@Ajax.ActionLink("Knitting", "Index", "Knitting", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>
+                    <li>@Ajax.ActionLink("Knit", "Index", "Knitting", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>
+                </ul>
+                <ul class="nav navbar-nav">
+                    <li>@Ajax.ActionLink("Washing", "Index", "CW", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>
+                </ul>
+                <ul class="nav navbar-nav">
+                    <li>@Ajax.ActionLink("Heat", "Index", "HSP", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>
+                </ul>
+                <ul class="nav navbar-nav">
+                    <li>@Ajax.ActionLink("Singeing", "Index", "Singeing", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>
+                </ul>
+                <ul class="nav navbar-nav">
+                    <li>@Ajax.ActionLink("Dyeing", "Index", "Dyeing", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>
+                </ul>
+                <ul class="nav navbar-nav">
+                    <li>@Ajax.ActionLink("Dryer", "Index", "Dryer", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>
+                </ul>
+                <ul class="nav navbar-nav">
+                    <li>@Ajax.ActionLink("Stenter", "Index", "Stenter", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>
+                </ul>
+                <ul class="nav navbar-nav">
+                    <li>@Ajax.ActionLink("Compact", "Index", "Compacting", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>
+                </ul>
+                <ul class="nav navbar-nav">
+                    <li>@Ajax.ActionLink("Peach", "Index", "Peach", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>
+                </ul>
+                <ul class="nav navbar-nav">
+                    <li>@Ajax.ActionLink("Brush", "Index", "Brush", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>
+                </ul>
+                <ul class="nav navbar-nav">
+                    <li>@Ajax.ActionLink("Print", "Index", "Print", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>
+                </ul>
+                <ul class="nav navbar-nav">
+                    <li>@Ajax.ActionLink("QC", "Index", "QC", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>
                 </ul>
                 <p id="SignOutUserName" style="color:white; display:none"></p>
                 <a id="SignOutBtn" style="float:right;margin-top:1%" href="#" class="btn btn-danger btn-sm">
