--- a/TextileResearchDevelopment/Views/Knitting/Index.cshtml
+++ b/TextileResearchDevelopment/Views/Knitting/Index.cshtml
@@ -18,9 +18,9 @@
     </style>
 </head>
 
-<h2>Knitting Entry Form</h2>
+<br/>
 
-<div id="MainDiv" class="panel panel-default ">
+<div id="MainDiv">
 
     <ul id="MainContextMenu" class="dropdown-menu" role="menu" style="display:none">
         <li><a tabindex="-1" href="#">Delete</a></li>
