--- a/TextileResearchDevelopment/Views/Shared/_Layout.cshtml
+++ b/TextileResearchDevelopment/Views/Shared/_Layout.cshtml
@@ -26,48 +26,7 @@
                 </button>
             </div>
             <div id="ActionLinkBar" class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Ajax.ActionLink("Fabric", "Index", "Fabric", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>
-                </ul>
-                <ul class="nav navbar-nav">
-                    <li>@Ajax.ActionLink("Knit", "Index", "Knitting", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>
-                </ul>
-                <ul class="nav navbar-nav">
-                    <li>@Ajax.ActionLink("Wash", "Index", "CW", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>
-                </ul>
-                <ul class="nav navbar-nav">
-                    <li>@Ajax.ActionLink("Heat", "Index", "HSP", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>
-                </ul>
-                <ul class="nav navbar-nav">
-                    <li>@Ajax.ActionLink("Singe", "Index", "Singeing", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>
-                </ul>
-                <ul class="nav navbar-nav">
-                    <li>@Ajax.ActionLink("Dye", "Index", "Dyeing", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>
-                </ul>
-                <ul class="nav navbar-nav">
-                    <li>@Ajax.ActionLink("Dryer", "Index", "Dryer", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>
-                </ul>
-                <ul class="nav navbar-nav">
-                    <li>@Ajax.ActionLink("Stenter", "Index", "Stenter", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>
-                </ul>
-                <ul class="nav navbar-nav">
-                    <li>@Ajax.ActionLink("Compact", "Index", "Compacting", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>
-                </ul>
-                <ul class="nav navbar-nav">
-                    <li>@Ajax.ActionLink("Peach", "Index", "Peach", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>
-                </ul>
-                <ul class="nav navbar-nav">
-                    <li>@Ajax.ActionLink("Brush", "Index", "Brush", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>
-                </ul>
-                <ul class="nav navbar-nav">
-                    <li>@Ajax.ActionLink("Print", "Index", "PrintInfo", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>
-                </ul>
-                <ul class="nav navbar-nav">
-                    <li>@Ajax.ActionLink("QC", "Index", "QC", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>
-                </ul>
-                <ul class="nav navbar-nav">
-                    <li>@Ajax.ActionLink("Admin", "Index", "UserManagement", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>
-                </ul>
+                <ul class="nav navbar-nav"></ul>
                 <p id="SignOutUserName" style="color:white; display:none"></p>
                 <a id="SignOutBtn" style="float:right;margin-top:1%" href="#" class="btn btn-danger btn-sm">
                     <span class="glyphicon glyphicon-log-out"></span> Log out
@@ -92,9 +51,9 @@
 
         debugger;
 
-        //GetUserAccess();
+        GetUserAccess();
 
-        @*function GetUserAccess() {
+        function GetUserAccess() {
 
             $.ajax({
                 url: "/Home/GetUserAccess",
@@ -112,39 +71,55 @@
                             }
                             if (parseInt(result[i]) == 2)
                             {
-                                $("#ActionLinkBar ul").append('<li>@Ajax.ActionLink("Knitting", "Index", "Knitting", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>');
+                                $("#ActionLinkBar ul").append('<li>@Ajax.ActionLink("Knit", "Index", "Knitting", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>');
                             }
                             if (parseInt(result[i]) == 3)
                             {
-                                $("#ActionLinkBar ul").append('<li>@Ajax.ActionLink("Dyeing", "Index", "Dyeing", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>');
+                                $("#ActionLinkBar ul").append('<li>@Ajax.ActionLink("Washing", "Index", "CW", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>');
                             }
                             if (parseInt(result[i]) == 4)
                             {
-                                $("#ActionLinkBar ul").append('<li>@Ajax.ActionLink("Slitting", "Index", "Slitting", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>');
+                                $("#ActionLinkBar ul").append('<li>@Ajax.ActionLink("Heat", "Index", "HSP", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>');
                             }
                             if (parseInt(result[i]) == 5)
                             {
-                                $("#ActionLinkBar ul").append('<li>@Ajax.ActionLink("Stenter", "Index", "Stenter", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>');
+                                $("#ActionLinkBar ul").append('<li>@Ajax.ActionLink("Singe", "Index", "Singeing", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>');
                             }
                             if (parseInt(result[i]) == 6)
                             {
-                                $("#ActionLinkBar ul").append('<li>@Ajax.ActionLink("Aop-Print", "Index", "AopPrint", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>');
+                                $("#ActionLinkBar ul").append('<li>@Ajax.ActionLink("Dye", "Index", "Dyeing", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>');
                             }
                             if (parseInt(result[i]) == 7)
                             {
-                                $("#ActionLinkBar ul").append('<li>@Ajax.ActionLink("Test-Report", "Index", "TestReport", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>');
+                                $("#ActionLinkBar ul").append('<li>@Ajax.ActionLink("Dryer", "Index", "Dryer", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>');
                             }
                             if (parseInt(result[i]) == 8)
                             {
-                                $("#ActionLinkBar ul").append('<li>@Ajax.ActionLink("Remarks", "Index", "Remarks", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>');
+                                $("#ActionLinkBar ul").append('<li>@Ajax.ActionLink("Stenter", "Index", "Stenter", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>');
                             }
                             if (parseInt(result[i]) == 9)
                             {
-                                $("#ActionLinkBar ul").append('<li>@Ajax.ActionLink("Report", "Index", "Report", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>');
+                                $("#ActionLinkBar ul").append('<li>@Ajax.ActionLink("Compact", "Index", "Compacting", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>');
                             }
                             if (parseInt(result[i]) == 10)
                             {
-                                $("#ActionLinkBar ul").append('<li>@Ajax.ActionLink("UserManagement", "Index", "UserManagement", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>');
+                                $("#ActionLinkBar ul").append('<li>@Ajax.ActionLink("Peach", "Index", "Peach", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>');
+                            }
+                            if (parseInt(result[i]) == 11)
+                            {
+                                $("#ActionLinkBar ul").append('<li>@Ajax.ActionLink("Brush", "Index", "Brush", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>');
+                            }
+                            if (parseInt(result[i]) == 12)
+                            {
+                                $("#ActionLinkBar ul").append('<li>@Ajax.ActionLink("Print", "Index", "PrintInfo", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>');
+                            }
+                            if (parseInt(result[i]) == 13)
+                            {
+                                $("#ActionLinkBar ul").append('<li>@Ajax.ActionLink("QC", "Index", "QC", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>');
+                            }
+                            if (parseInt(result[i]) == 14)
+                            {
+                                $("#ActionLinkBar ul").append('<li>@Ajax.ActionLink("Role", "Index", "UserManagement", new AjaxOptions { UpdateTargetId = "MainDiv", InsertionMode = InsertionMode.Replace, HttpMethod = "GET" })</li>');
                             }
                         }
                     }
@@ -156,7 +131,7 @@
                 }
             });
 
-        }*@
+        }
 
         $('#SignOutBtn').click(function (){
             signout();
