--- a/TextileResearchDevelopment/Views/Fabric/Index.cshtml
+++ b/TextileResearchDevelopment/Views/Fabric/Index.cshtml
@@ -18,7 +18,7 @@
     </style>
 </head>
 
-<h2>Fabric Entry Form</h2>
+<br />
 
 <div id="MainDiv">
 
@@ -37,8 +37,8 @@
                         <label for="BuyerName" class="control-label" style="width:35%;">Buyer Name</label>
                         <div style=" display: inline;">
                             <select name="BuyerName" id="BuyerName" style="width:50%;" class="form-control input-sm" required autofocus></select>
-                            <a href="#" class="btn-sm btn-info" style="width:10%;display:inline" data-toggle="modal" data-target="#myModalHorizontal">
-                                <span class="glyphicon glyphicon-plus"></span>
+                            <a href="#" id="BuyerNameAdd" class="btn-sm btn-info" style="width:10%;display:inline" data-toggle="modal" data-target="#myModalHorizontal">
+                                <span  class="glyphicon glyphicon-plus"></span>
                             </a>
                         </div>
                     </div>
@@ -46,7 +46,7 @@
                         <label for="FabricType" class="control-label" style="width:35%;">Fabric Type</label>
                         <div style="display: inline;">
                             <select name="FabricType" id="FabricType" style="width:50%;" class="form-control input-sm" required autofocus></select>
-                            <a href="#" class="btn-sm btn-info" style="width:10%;">
+                            <a href="#" id="FabricTypeAdd" class="btn-sm btn-info" style="width:10%;">
                                 <span class="glyphicon glyphicon-plus"></span>
                             </a>
                         </div>
@@ -83,7 +83,7 @@
                         <label for="CompositionType" class="control-label" style="width:35%;">Composition</label>
                         <div style="display: inline;">
                             <select name="CompositionType" id="CompositionType" style="width:50%;" class="form-control input-sm" required autofocus></select>
-                            <a href="#" class="btn-sm btn-info" style="width:10%;">
+                            <a href="#" id="CompositionTypeAdd" class="btn-sm btn-info" style="width:10%;">
                                 <span class="glyphicon glyphicon-plus"></span>
                             </a>
                         </div>
@@ -128,7 +128,7 @@
                     <th>BuyerID</th>
                     <th>FabricTypeID</th>
                     <th>CompositionTypeID</th>
-                    <th>FP</th>
+                    <th>ua</th>
                     <th>BarCode</th>
                     <th>BuyerName</th>
                     <th>FabricType</th>
@@ -152,7 +152,7 @@
                     <th></th>
                     <th></th>
                     <th></th>
-                    <th>FP</th>
+                    <th></th>
                     <th>BarCode</th>
                     <th>BuyerName</th>
                     <th>FabricType</th>
@@ -254,7 +254,6 @@
         loadFPList();
 
         function loadFPList() {
-            debugger;
             var s = '';
             for (var i = 0; i < 12; i++) {
                 if (i == 1)
@@ -298,7 +297,6 @@
                 url: "/Fabric/GetCompositionTypeList",
                 data: "{}",
                 success: function (data) {
-                    debugger;
                     var data = data.data;
                     var s = '<option value="">Please Composition</option>';
                     for (var i = 0; i < data.length; i++) {
@@ -316,7 +314,6 @@
                 url: "/Fabric/GetBuyerList",
                 data: "{}",
                 success: function (data) {
-                    debugger
                     var data = data.data;
                     var s = '<option value="">Please Buyer</option>';
                     for (var i = 0; i < data.length; i++) {
@@ -340,24 +337,66 @@
                         s += '<option value="' + data[i].Id + '">' + data[i].FabricTypeName + '</option>';
                     }
                     $("#FabricType").html(s);
+                    SetRoles();
                 }
             });
         }
 
-        // Setup - add a text input to each footer cell
+        function SetRoles() {
+            debugger;
+
+            var user = {
+                Name : "Fabric"
+            }
+
+            $.ajax({
+                type: "POST",
+                url: "/UserManagement/GetRoles",
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                data: JSON.stringify(user),
+                success: function (response) {
+                    debugger;
+                    if (response != "" && response != null)
+                    {
+                        if (response.Crud == 0)
+                        {
+                            $('#saveBtn').hide();
+                            $('#updateBtn').hide();
+                            $('#deleteBtn').hide();
+                        }
+                        if (response.LibrarySet == 0)
+                        {
+                            $('#BuyerNameAdd').hide();
+                            $('#FabricTypeAdd').hide();
+                            $('#CompositionTypeAdd').hide();
+                        }
+                    }
+                    else {
+                        alert("Connection Error!!!");
+                        return;
+                    }
+                },
+                failure: function () {
+                    $("#tblItems").append(" Error when fetching data please contact administrator");
+                }
+            });
+        }
+
         $('#fabricTable tfoot th').each(function () {
             var title = $(this).text();
             $(this).html('<input type="text" placeholder="Search" />');
         });
 
-        // DataTable
         var fabricTable = $('#fabricTable').DataTable({
+            dom: 'Bfrtip',
             "ajax":
             {
                 "url": "/Fabric/GetData",
                 "type": "GET",
                 "dataType": "JSON"
             },
+            "autowidth": false,
             "scrollY": true,
             "scrollX": true,
             "Sorting": true,
@@ -400,6 +439,7 @@
                 {
                     "data": "ua"
                 },
+                { "data": "BarCode" },
                 { "data": "buyer.BuyerName" },
                 { "data": "fb.FabricTypeName" },
                 { "data": "cm.Composition" },
@@ -412,7 +452,6 @@
                 {
                     data: "CreateTime",
                     render: function (data, type, row) {
-                        debugger;
                         return moment(data, "YYYY/MM/DD HH:mm").format("DD/MM/YYYY h:mm");
                     }
                 },
@@ -459,7 +498,6 @@
             }
         });
 
-        // Apply the search
         fabricTable.columns().every(function () {
             var that = this;
 
